// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion displays accordion arrow icon on left 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters mui-style-22nfl0-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading mui-style-cy7rkm-MuiAccordion-heading"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters mui-style-19yav06-MuiButtonBase-root-MuiAccordionSummary-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters mui-style-1r0e0ir-MuiAccordionSummary-content"
        >
          Accordion Summary
        </span>
        <span
          class="MuiAccordionSummary-expandIconWrapper mui-style-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium mui-style-1hysgva-MuiSvgIcon-root"
            data-testid="SortAscIconIcon"
            fill="none"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="chevron"
            >
              <path
                d="M12 16.205C11.768 16.205 11.537 16.125 11.349 15.964L3.59003 9.31404L4.89203 7.79504L12 13.888L19.108 7.79504L20.41 9.31404L12.651 15.964C12.463 16.125 12.232 16.205 12 16.205Z"
                fill="currentColor"
                id="Path"
              />
            </g>
          </svg>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden mui-style-cwrbtg-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical mui-style-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical mui-style-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region mui-style-at4ued-MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root mui-style-1lj39kh-MuiAccordionDetails-root"
            >
              Detail Contents
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Accordion should render component 1`] = `
<div>
  <div
    class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation1 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters mui-style-1e12nxm-MuiPaper-root-MuiAccordion-root"
    style="--Paper-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px 0px rgba(0,0,0,0.14),0px 1px 3px 0px rgba(0,0,0,0.12);"
  >
    <h3
      class="MuiAccordion-heading mui-style-cy7rkm-MuiAccordion-heading"
    >
      <button
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root MuiAccordionSummary-gutters mui-style-kvmwx9-MuiButtonBase-root-MuiAccordionSummary-root"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiAccordionSummary-content MuiAccordionSummary-contentGutters mui-style-1r0e0ir-MuiAccordionSummary-content"
        >
          Accordion Summary
        </span>
        <span
          class="MuiAccordionSummary-expandIconWrapper mui-style-1wqf3nl-MuiAccordionSummary-expandIconWrapper"
        >
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium mui-style-1hysgva-MuiSvgIcon-root"
            data-testid="SortAscIconIcon"
            fill="none"
            focusable="false"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g
              id="chevron"
            >
              <path
                d="M12 16.205C11.768 16.205 11.537 16.125 11.349 15.964L3.59003 9.31404L4.89203 7.79504L12 13.888L19.108 7.79504L20.41 9.31404L12.651 15.964C12.463 16.125 12.232 16.205 12 16.205Z"
                fill="currentColor"
                id="Path"
              />
            </g>
          </svg>
        </span>
      </button>
    </h3>
    <div
      class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden mui-style-cwrbtg-MuiCollapse-root"
      style="min-height: 0px;"
    >
      <div
        class="MuiCollapse-wrapper MuiCollapse-vertical mui-style-1x6hinx-MuiCollapse-wrapper"
      >
        <div
          class="MuiCollapse-wrapperInner MuiCollapse-vertical mui-style-1i4ywhz-MuiCollapse-wrapperInner"
        >
          <div
            class="MuiAccordion-region mui-style-at4ued-MuiAccordion-region"
            role="region"
          >
            <div
              class="MuiAccordionDetails-root mui-style-1lj39kh-MuiAccordionDetails-root"
            >
              Detail Contents
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
